--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
     <div id="droplet-container"></div>
     <div id="upgrade-container"></div>
 
+    <h2>Powder game (unrelated for now)</h2>
+    <div id="canvas-container">
+        <canvas id="powderCanvas"></canvas>
+    </div>
+
     <div id="tooltip" class="tooltip hidden"></div>
 
 
     <script src="script.js"></script>
+    <script src="powder.js"></script>
 </body>
 </html>
