--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <div id="upgrade-container"></div>
 
     <h2>Powder game (unrelated for now)</h2>
-    <div id="canvas-container">
+    <div id="canvasButtonsContainer">
         <canvas id="powderCanvas"></canvas>
+        <div id="particleSelector"></div>
     </div>
 
     <div id="tooltip" class="tooltip hidden"></div>
-
+    <div id="particleSelector"></div>
 
     <script src="script.js"></script>
     <script src="powder.js"></script>
