--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="droplet-container"></div>
     <div id="upgrade-container"></div>
 
-    <h2>Powder game (unrelated for now)</h2>
+    <h2>Powder game (Now with touch support)</h2>
     <div id="canvasButtonsContainer">
         <canvas id="powderCanvas"></canvas>
         <div id="particleSelector"></div>
