--- a/index.html
+++ b/index.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🦫 Game</title>
+    <title>Alialun's Powder Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <!--<div class="container">
         <h1>🦫 Game</h1>
         <p><span id="counter">0</span></p>
-        <!--<button id="clickBtn">Click to Increase</button>-->
-        <!--<button id="upgradeBtn">Upgrade Click Power (x10)</button>-->
     </div>
-    <!-- Falling Droplets Container -->
     <div id="droplet-container"></div>
     <div id="upgrade-container"></div>
-
+-->
     <h2>Powder game (Now with touch support)</h2>
     <div id="canvasButtonsContainer">
         <canvas id="powderCanvas"></canvas>
@@ -26,7 +23,7 @@
     <div id="tooltip" class="tooltip hidden"></div>
     <div id="particleSelector"></div>
 
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script>-->
     <script src="powder.js"></script>
 </body>
 </html>
