--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="droplet-container"></div>
     <div id="upgrade-container"></div>
 -->
-    <h2>Powder game (Now with touch support)</h2>
+    <h2>Powder game (Now with improved touch for Áda)</h2>
     <div id="canvasButtonsContainer">
         <canvas id="powderCanvas"></canvas>
         <div id="particleSelector"></div>
