added wood and increased size by 50%

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div id="droplet-container"></div>
     <div id="upgrade-container"></div>
 -->
-    <h2>Powder game (Now with improved touch for Áda)</h2>
+    <h2>🔥 Alialun's Powder game (Now with improved touch for Áda) 🔥</h2>
     <div id="canvasButtonsContainer">
         <canvas id="powderCanvas"></canvas>
         <div id="particleSelector"></div>
+        <div id="particleSelector2"></div>
     </div>
 
     <div id="tooltip" class="tooltip hidden"></div>
-    <div id="particleSelector"></div>
 
     <!--<script src="script.js"></script>-->
     <script src="powder.js"></script>
