brush size and fps cap test

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 -->
     <h2>🔥 Alialun's Powder game (Now with improved touch for Áda) 🔥</h2>
     <div id="canvasButtonsContainer">
+        <div id="settingsDiv">
+            <div id="brushSize"></div>
+        </div>
         <canvas id="powderCanvas"></canvas>
         <div id="particleSelector"></div>
         <div id="particleSelector2"></div>
