calm down snow wip

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="droplet-container"></div>
     <div id="upgrade-container"></div>
 -->
-    <h2>🔥 Alialun's Powder game (Burn your PC edition for Marek) 🔥</h2>
+    <h2>🔥 Alialun's Powder game 🔥</h2>
     <div id="canvasButtonsContainer">
         <div id="settingsDiv">
             <div id="brushSize"></div>
